<resources>
    <string name="app_name">Improvemental</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_service">LIST OF SERVICES</string>
    <string name="menu_booking_history_upcoming">BOOKING HISTORY</string>
    <string name="menu_Review">REVIEW</string>
    <string name="menu_MY_ACCOUNT">MY ACCOUNT</string>
    <string name="EnjoyOurBestService">Individual-Counseling_Title</string>
    <string name="individual_counseling_title">Enjoy Our Best Service</string>
    <string name="button_more_information_individual">More Information</string>
    <string name="couple_text_no_1">1)Increase closeness,respect and affection</string>
    <string name="button_more_information_family">ore Information</string>
    <string name="button_more_information_couple">More Information</string>
    <string name="couple_text_no_2">2)Increase understanding between partners</string>
    <string name="couple_text_title"><![CDATA[Couples & Marriage Counselling]]></string>
    <string name="couple_text_no_4">4)Keep calm when discussing conflict</string>
    <string name="couple_text_no_3">3)Break though and reslove conflict, when partners feel stuck</string>
    <string name="family_counselling_text">Family Counselling</string>
    <string name="family_Text">Family System Therapy is used to help people resolve their individual problems within the context of the family unit.Menbers of the family work together to understand their,and each others role in the family.</string>
    <string name="facebook_email">Facebook email</string>
    <string name="phone_num">Phone Number</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone number</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="gmail">Gmail</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="hint_email">Email</string>
    <string name="send">Send</string>
    <string name="type_your_email_address_here">Type your email address here</string>
    <string name="welcome_">WELCOME</string>
    <string name="we_re_improvemental_a_group_of_people_who_are_willing_to_share_the_secrets_to_help_improve_people_mental_health">We\'re Improvemental, a group of people who are willing to share the secrets to help improve people mental health.</string>
    <string name="check_your_mailbox">Check Your Mailbox</string>
    <string name="email_send_successful">Email Send Successful</string>
    <string name="family_issues">Family Issues</string>
    <string name="add_changing_dynamics_births_deaths_separations_and_growth_and_navigating_peaceful_relationships_can_be_challenging_these_and_many_other_events_can_trigger_family_conflict">Add changing dynamics (births, deaths, separations, and growth)and navigating peaceful relationships can be challenging. These and many other events can trigger family conflict.</string>
    <string name="stress"><![CDATA[>Stress]]></string>
    <string name="signs_and_symptoms_of_family_issues">SIGNS AND SYMPTOMS OF FAMILY ISSUES</string>
    <string name="other_relationships_suffer"><![CDATA[>Other relationships suffer]]></string>
    <string name="anxiety"><![CDATA[>Anxiety]]></string>
    <string name="how_it_affects_you">How it affects you:</string>
    <string name="depression"><![CDATA[>Depression]]></string>
    <string name="emotional_fatigue"><![CDATA[>Emotional fatigue]]></string>
    <string name="work_performance_suffers"><![CDATA[>Work performance suffers]]></string>
    <string name="physical_altercations"><![CDATA[>Physical altercations]]></string>
    <string name="unwillingness_to_listen_when_someone_is_expressing_concerns"><![CDATA[>Unwillingness to listen when someone is expressing concerns]]></string>
    <string name="anger_management_issues"><![CDATA[>Anger management issues]]></string>
    <string name="continual_arguing_and_bickering"><![CDATA[>Continual arguing and bickering]]></string>
    <string name="inability_to_communicate_effectively"><![CDATA[>Inability to communicate effectively]]></string>
    <string name="families_are_a_complex_unit_and_come_in_many_shapes_and_sizes_as_much_as_there_can_be_love_and_acceptance_in_your_family_there_can_also_be_many_issues_that_make_your_family_anything_but_loving_or_accepting">Families are a complex unit and come in many shapes and sizes. As much as there can be love and acceptance in your family, there can also be many issues that make your family anything but loving or accepting.</string>
    <string name="book_now">BOOK NOW</string>
</resources>