<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <EditText
        android:id="@+id/chg_fb"
        android:layout_width="261dp"
        android:layout_height="36dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/edittextlayout"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/facebook_email"
        app:layout_constraintBottom_toTopOf="@+id/chg_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fb"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/phonenum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/phone_num"
        android:textColor="#0A0A0A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView55"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView55"
        android:layout_width="32dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:src="@drawable/facebook"
        app:layout_constraintEnd_toStartOf="@+id/chg_fb"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fb" />

    <TextView
        android:id="@+id/fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/facebook_email"
        android:textColor="#0A0A0A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chg_gmail" />

    <Button
        android:id="@+id/btn_saveedit"
        android:layout_width="329dp"
        android:layout_height="34dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/buttonstuff"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView51"
        android:layout_width="302dp"
        android:layout_height="72dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView52"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/menu"
        app:layout_constraintEnd_toStartOf="@+id/imageView51"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/chg_phone"
        android:layout_width="296dp"
        android:layout_height="39dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittextlayout"
        android:drawableStart="@drawable/ic_action_phone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/phone_number"
        app:layout_constraintBottom_toTopOf="@+id/btn_saveedit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView53"
        android:layout_width="102dp"
        android:layout_height="118dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView51" />

    <Button
        android:id="@+id/btn_canceledit"
        android:layout_width="329dp"
        android:layout_height="34dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttonstuff"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_saveedit" />

    <EditText
        android:id="@+id/chg_username"
        android:layout_width="298dp"
        android:layout_height="35dp"
        android:layout_marginTop="332dp"
        android:background="@drawable/edittextlayout"
        android:drawableStart="@drawable/ic_action_name"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/chg_gmail"
        android:layout_width="266dp"
        android:layout_height="31dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittextlayout"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/gmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView54"
        app:layout_constraintTop_toBottomOf="@+id/chg_username" />

    <TextView
        android:id="@+id/username2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/username"
        android:textColor="#0A0A0A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView53" />

    <TextView
        android:id="@+id/gmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gmail"
        android:textColor="#0A0A0A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chg_username" />

    <ImageView
        android:id="@+id/imageView54"
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:layout_marginStart="56dp"
        android:background="#FAFAFA"
        android:src="@drawable/google"
        app:layout_constraintBottom_toTopOf="@+id/fb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gmail"
        app:layout_constraintVertical_bias="0.473" />
</androidx.constraintlayout.widget.ConstraintLayout>